--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: ci-sonarcloud
+name: CI
 
 on:
   pull_request:
@@ -6,8 +6,10 @@ on:
       - develop
 
 jobs:
-  run-ci:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
