--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+      - run: npm install
       - run: npm test
       - run: npm run build --if-present
